css/style.css
body::before {
  display: block;
  content: "";
  height: 60px;
}

.wallpaper {
  background:
    linear-gradient(rgba(128, 128, 128, 0.5), rgba(128, 128, 128, 0.5)),
    url(/images/backgroundwallpaper.png);
  background-size: 100% 100%;
  height: 100vh;
}

.card-img-top {
  height: 180px;
  /* object-fit: cover; */
}

